almost cell responsive

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script></script>
     <link rel="stylesheet" href="./css/main.min.css">
-
-    <link rel="stylesheet" href="style-index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
@@ -19,7 +17,7 @@
   </head>
   <body>
     <header>
-      <section class="top">
+      <!-- <section class="top">
         <div class="top__container">
           <nav>
             <a class="webstudio" href="#" target="_blank">WebStudio</a>
@@ -73,7 +71,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </header>
 
     <main>
@@ -173,57 +171,57 @@
         </div>
       </section>
 
-      <section class="content1">
-        <div class="content1__container">
-          <ul class="content1__cards">
-            <li class="content1__card">
+      <section class="features">
+        <div class="features__container">
+          <ul class="features__cards">
+            <li class="features__card">
               <a href="#">
-                <svg class="content1__text--svg">
+                <svg class="features__text--svg">
                   <use href="./Imagenes/SVG/sprite.svg#antena"></use>
                 </svg>
               </a>
-              <h3 class="content1__card--title">Atencion a los detalles</h3>
-              <p class="content1__card--text">
+              <h3 class="features__card--title">Atencion a los detalles</h3>
+              <p class="features__card--text">
                 Nos adentramos en todo los detalles y procesos de su
                 negocio,para si desarrollar una solucion a su medida
               </p>
             </li>
 
-            <li class="content1__card">
+            <li class="features__card">
               <a href="#">
-                <svg class="content1__text--svg">
+                <svg class="features__text--svg">
                   <use href="./Imagenes/SVG/sprite.svg#reloj"></use>
                 </svg>
               </a>
-              <h3 class="content1__card--title">Puntualidad</h3>
-              <p class="content1__card--text">
+              <h3 class="features__card--title">Puntualidad</h3>
+              <p class="features__card--text">
                 Con nosotros, usted puede sentirse seguro y protegido. Un
                 principio importante de la empresa: respetar su tiempo y
                 respetar los plazos acordados
               </p>
             </li>
 
-            <li class="content1__card">
+            <li class="features__card">
               <a href="#">
-                <svg class="content1__text--svg">
+                <svg class="features__text--svg">
                   <use href="./Imagenes/SVG/sprite.svg#diagrama"></use>
                 </svg>
               </a>
-              <h3 class="content1__card--title">Planificación</h3>
-              <p class="content1__card--text">
+              <h3 class="features__card--title">Planificación</h3>
+              <p class="features__card--text">
                 Usted prodrá observar y participar en cada fase del desarrollo y
                 aplicación de soluciones.
               </p>
             </li>
 
-            <li class="content1__card">
+            <li class="features__card">
               <a href="#">
-                <svg class="content1__text--svg">
+                <svg class="features__text--svg">
                   <use href="./Imagenes/SVG/sprite.svg#astronauta"></use>
                 </svg>
               </a>
-              <h3 class="content1__card--title">Tecnología Moderna</h3>
-              <p class="content1__card--text">
+              <h3 class="features__card--title">Tecnología Moderna</h3>
+              <p class="features__card--text">
                 Usamos herramientas innovadoras para resolver las tareas
                 asignadas. Es hora de simplificar los procesos laborales.
               </p>
@@ -232,11 +230,11 @@
         </div>
       </section>
 
-      <section class="content2">
+      <section class="what_we_do">
         <h2>A qué nos dedicamos</h2>
-        <div class="content2__container">
-          <ul class="content2__pictures">
-            <li class="content2__picture--element">
+        <div class="what_we_do__container">
+          <ul class="what_we_do__pictures">
+            <li class="what_we_do__picture--element">
               <img
                 src="Imagenes/images-index/caja1.jpg"
                 alt="imagen example"
@@ -244,7 +242,7 @@
                 height="323"
               />
             </li>
-            <li class="content2__picture--element">
+            <li class="what_we_do__picture--element">
               <img
                 src="Imagenes/images-index/imagen(4).jpg"
                 alt="imagen example 2"
@@ -252,7 +250,7 @@
                 height="323"
               />
             </li>
-            <li class="content2__picture--element">
+            <li class="what_we_do__picture--element">
               <img
                 src="Imagenes/images-index/imagen(5).jpg"
                 alt="imagen example 3"
@@ -261,28 +259,28 @@
               />
             </li>
           </ul>
-          <div class="content2__textcontainer">
-            <ul class="content2__pictures">
-              <li class="content2__picture--element">
-                <h3 class="content2__textdescription">
+          <div class="what_we_do__textcontainer">
+            <ul class="what_we_do__pictures">
+              <li class="what_we_do__picture--element">
+                <h3 class="what_we_do__textdescription">
                   APLICACIONES DE ESCRITORIO
                 </h3>
               </li>
-              <li class="content2__picture--element">
-                <h3 class="content2__textdescription">APLICACIONES MOVILES</h3>
+              <li class="what_we_do__picture--element">
+                <h3 class="what_we_do__textdescription">APLICACIONES MOVILES</h3>
               </li>
-              <li class="content2__picture--element">
-                <h3 class="content2__textdescription">SOLUCIONES DE DISEÑO</h3>
+              <li class="what_we_do__picture--element">
+                <h3 class="what_we_do__textdescription">SOLUCIONES DE DISEÑO</h3>
               </li>
             </ul>
           </div>
         </div>
       </section>
 
-      <section class="content3">
+      <section class="our_team">
         <h2>Nuestro equipo</h2>
-        <div class="content3__container">
-          <ul class="content3__cards">
+        <div class="our_team__container">
+          <ul class="our_team__cards">
             <li class="card__info">
               <img
                 src="Imagenes/images-index/imagen(6).jpg"
@@ -423,37 +421,37 @@
         </div>
       </section>
 
-      <section class="content4">
+      <section class="regular_customers">
         <h2>Clientes Regulares</h2>
-        <div class="content4__container">
-          <ul class="content4__customerslist">
-            <li class="content4__customer">
-              <svg class="content4__customerlogo">
+        <div class="regular_customers__container">
+          <ul class="regular_customers__customerslist">
+            <li class="regular_customers__customer">
+              <svg class="regular_customers__customerlogo">
                 <use href="Imagenes/SVG/sprite.svg#cliente1"></use>
               </svg>
             </li>
-            <li class="content4__customer">
-              <svg class="content4__customerlogo">
+            <li class="regular_customers__customer">
+              <svg class="regular_customers__customerlogo">
                 <use href="Imagenes/SVG/sprite.svg#cliente2"></use>
               </svg>
             </li>
-            <li class="content4__customer">
-              <svg class="content4__customerlogo">
+            <li class="regular_customers__customer">
+              <svg class="regular_customers__customerlogo">
                 <use href="Imagenes/SVG/sprite.svg#cliente3"></use>
               </svg>
             </li>
-            <li class="content4__customer">
-              <svg class="content4__customerlogo">
+            <li class="regular_customers__customer">
+              <svg class="regular_customers__customerlogo">
                 <use href="Imagenes/SVG/sprite.svg#cliente4"></use>
               </svg>
             </li>
-            <li class="content4__customer">
-              <svg class="content4__customerlogo">
+            <li class="regular_customers__customer">
+              <svg class="regular_customers__customerlogo">
                 <use href="Imagenes/SVG/sprite.svg#cliente5"></use>
               </svg>
             </li>
-            <li class="content4__customer">
-              <svg class="content4__customerlogo">
+            <li class="regular_customers__customer">
+              <svg class="regular_customers__customerlogo">
                 <use href="Imagenes/SVG/sprite.svg#cliente6"></use>
               </svg>
             </li>
