--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script></script>
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
@@ -149,17 +149,18 @@
                 ></textarea>
 
                 <!-- TERMINOS -->
-                <label class="label__conditions" for="terminos"
-                  >Estoy de acuerdo con el boletín informativo y acepto los
-                  términos y condiciones</label
-                >
-                <input
-                  class="modal__form--checkbox"
-                  type="checkbox"
-                  name="terminos"
-                  required
-                />
-
+                <div class="label__conditions">
+                  <input
+                    class="modal__form--checkbox"
+                    type="checkbox"
+                    name="terminos"
+                    required
+                  />
+                  <label class="label__conditions--text" for="terminos"
+                    >Estoy de acuerdo con el boletín informativo y acepto los
+                    términos y condiciones</label
+                  >
+                </div>
                 <input
                   class="button submit__modal"
                   type="submit"
@@ -267,10 +268,14 @@
                 </h3>
               </li>
               <li class="what_we_do__picture--element">
-                <h3 class="what_we_do__textdescription">APLICACIONES MOVILES</h3>
+                <h3 class="what_we_do__textdescription">
+                  APLICACIONES MOVILES
+                </h3>
               </li>
               <li class="what_we_do__picture--element">
-                <h3 class="what_we_do__textdescription">SOLUCIONES DE DISEÑO</h3>
+                <h3 class="what_we_do__textdescription">
+                  SOLUCIONES DE DISEÑO
+                </h3>
               </li>
             </ul>
           </div>
@@ -463,18 +468,24 @@
     <footer>
       <section class="footpage">
         <div class="footpage__container">
-          <ul class="footpage__generalinfo"> 
-            <a class="webstudio footer-webstudio" href="#" target="_self">WebStudio</a> 
-            <li> 
-              <address class="footpage__address"> 
+          <ul class="footpage__generalinfo">
+            <a class="webstudio footer-webstudio" href="#" target="_self"
+              >WebStudio</a
+            >
+            <li>
+              <address class="footpage__address">
                 Calz. Ticomán 500, Ciudad de México, CDMX, México
               </address>
             </li>
             <li>
-              <a href="mailto:info@example.com" class="footpage__contact">info@example.com</a>
+              <a href="mailto:info@example.com" class="footpage__contact"
+                >info@example.com</a
+              >
             </li>
             <li>
-              <a href="tel:+525555296000" class="footpage__contact">+52 55 5529 6000</a>
+              <a href="tel:+525555296000" class="footpage__contact"
+                >+52 55 5529 6000</a
+              >
             </li>
           </ul>
           <div class="footpage__find-us">
@@ -518,7 +529,11 @@
                 placeholder="Correo electronico"
                 required
               />
-              <input class="button subscription-submit" type="submit" value="Suscríbanse" />
+              <input
+                class="button subscription-submit"
+                type="submit"
+                value="Suscríbanse"
+              />
               <svg class="subscription__submit-logo">
                 <use href="./Imagenes/SVG/sprite.svg#enviar-sub"></use>
               </svg>
