--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <!-- <section class="top">
+      <section class="top">
         <div class="top__container">
           <nav>
             <a class="webstudio" href="#" target="_blank">WebStudio</a>
@@ -71,7 +71,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </header>
 
     <main>
