another width attempt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Homework#1</title>
+    <title>Homework_8__Javier_Vargas</title>
   </head>
   <body>
     <header>
