header tablet finished

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="top">
         <div class="top__container">
           <nav>
-            <a class="webstudio" href="#" target="_blank">WebStudio</a>
+            <a class="webstudio" id="main__logo" href="#" target="_blank">WebStudio</a>
 
             <ul class="top__navigation">
               <li>
@@ -75,7 +75,7 @@
     </header>
 
     <main>
-      <section class="main__title">
+      <!-- <section class="main__title">
         <div class="main__title--container">
           <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
 
@@ -96,7 +96,7 @@
               <h3>Deje sus datos, nos contactaremos con usted.</h3>
 
               <form name="request-service" autocomplete="off" action="">
-                <!-- NOMBRE -->
+
                 <label class="label__name" for="name">Nombre</label>
                 <div class="modal__info">
                   <input
@@ -110,7 +110,6 @@
                   </svg>
                 </div>
 
-                <!-- TELEFONO -->
                 <label class="label__name" for="telf">Telefono</label>
                 <div class="modal__info">
                   <input
@@ -124,7 +123,6 @@
                   </svg>
                 </div>
 
-                <!-- EMAIL -->
                 <label class="label__name" for="email">E-mail</label>
                 <div class="modal__info">
                   <input
@@ -138,7 +136,6 @@
                   </svg>
                 </div>
 
-                <!-- Comentario -->
                 <label class="label__name" for="coment">Comentario</label>
                 <textarea
                   class="modal__form--comentario"
@@ -148,7 +145,6 @@
                   name="coment"
                 ></textarea>
 
-                <!-- TERMINOS -->
                 <div class="label__conditions">
                   <input
                     class="modal__form--checkbox"
@@ -540,7 +536,7 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
     </footer>
     <script src="modal.js"></script>
   </body>
