almost finished tablet design

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </header>
 
     <main>
-      <!-- <section class="main__title">
+      <section class="main__title">
         <div class="main__title--container">
           <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
 
@@ -286,7 +286,7 @@
               <img
                 src="Imagenes/images-index/imagen(6).jpg"
                 alt="Andres Cubos"
-                width="277.5"
+                width="270"
                 height="260"
               />
               <h3 class="card__info--name">Andrés Cubo</h3>
@@ -320,7 +320,7 @@
               <img
                 src="Imagenes/images-index/imagen(7).jpg"
                 alt="Carla Palacios"
-                width="277.5"
+                width="270"
                 height="260"
               />
               <h3 class="card__info--name">Carla Palacios</h3>
@@ -354,7 +354,7 @@
               <img
                 src="Imagenes/images-index/imagen(8).jpg"
                 alt="Mario Dorado"
-                width="277.5"
+                width="270"
                 height="260"
               />
               <h3 class="card__info--name">Mario Dorado</h3>
@@ -388,7 +388,7 @@
               <img
                 src="Imagenes/images-index/imagen(9).jpg"
                 alt="Pablo Mijangos"
-                width="277.5"
+                width="270"
                 height="260"
               />
               <h3 class="card__info--name">Pablo Mijangos</h3>
@@ -462,7 +462,7 @@
     </main>
 
     <footer>
-      <section class="footpage">
+      <!-- <section class="footpage">
         <div class="footpage__container">
           <ul class="footpage__generalinfo">
             <a class="webstudio footer-webstudio" href="#" target="_self"
@@ -536,7 +536,7 @@
             </form>
           </div>
         </div>
-      </section> -->
+      </section>  -->
     </footer>
     <script src="modal.js"></script>
   </body>
