finish reposive tablet

--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@
     </main>
 
     <footer>
-      <!-- <section class="footpage">
+      <section class="footpage">
         <div class="footpage__container">
           <ul class="footpage__generalinfo">
-            <a class="webstudio footer-webstudio" href="#" target="_self"
+            <a class="webstudio footer-webstudio" id="main__logo--footer" href="#" target="_self"
               >WebStudio</a
             >
             <li>
@@ -536,7 +536,7 @@
             </form>
           </div>
         </div>
-      </section>  -->
+      </section> 
     </footer>
     <script src="modal.js"></script>
   </body>
