middle of responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <section class="top">
+      <!-- <section class="top">
         <div class="top__container">
           <nav>
             <a class="webstudio" id="main__logo" href="#" target="_blank">WebStudio</a>
@@ -71,11 +71,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </header>
 
     <main>
-      <section class="main__title">
+      <!-- <section class="main__title">
         <div class="main__title--container">
           <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
 
@@ -166,9 +166,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section class="features">
+      <!-- <section class="features">
         <div class="features__container">
           <ul class="features__cards">
             <li class="features__card">
@@ -225,7 +225,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <section class="what_we_do">
         <h2>A qué nos dedicamos</h2>
