now first attempt hw 8

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               </svg>
             </button>
 
-            <div class="menu__container js-menu-container is-open">
+            <div class="menu__container js-menu-container">
               <button class="menu__hamburguer--close js-close-menu">
                 <svg class="close-hamburguer">
                   <use href="./Imagenes/SVG/sprite.svg#close-menu"></use>
